--- a/DeliveryService/main/templates/main/test.html
+++ b/DeliveryService/main/templates/main/test.html
@@ -1,158 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<!-- todo extend base -->
-<!-- todo rename this file to shop or smt like it -->
-<head>
-    <meta charset="utf-8">
-    <meta name="description" content="">
-    <title>test page</title>
+{% extends "main/base.html" %}
 
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-
-    <style>
-        .bd-placeholder-img {
-            font-size: 1.125rem;
-            text-anchor: middle;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        @media (min-width: 768px) {
-            .bd-placeholder-img-lg {
-                font-size: 3.5rem;
-            }
-        }
-    </style>
-    <!-- Custom styles for this template -->
-    <link href="test.css" rel="stylesheet">
-</head>
-
-<body>
-<header>
-    <!-- navigation -->
-    <div class="bg-dark collapse" id="navbarHeader" style="">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-8 col-md-7 py-4">
-                    <h4 class="text-white">About</h4>
-                    <p class="text-muted">Add some information about the album below, the author, or any other
-                        background context. Make it a few sentences long so folks can pick up some informative tidbits.
-                        Then, link them off to some social networking sites
-                        or contact information.</p>
-                </div>
-                <div class="col-sm-4 offset-md-1 py-4">
-                    <h4 class="text-white">Contact</h4>
-                    <ul class="list-unstyled">
-                        <li><a href="#" class="text-white">Follow on Twitter</a></li>
-                        <li><a href="#" class="text-white">Like on Facebook</a></li>
-                        <li><a href="#" class="text-white">Email me</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+{% block title%}{{ title }}{% endblock %}
 
 
-    <div class="navbar navbar-dark bg-dark shadow-sm">
-        <div class="container d-flex justify-content-between">
-            <a href="#" class="navbar-brand d-flex align-items-center">
-                <!-- camera -->
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2"
-                     viewBox="0 0 24 24" focusable="false">
-                    <circle cx="12" cy="13" r="4"></circle>
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-                </svg>
-                <!-- <strong>Home</strong> -->
-                <!-- <strong><a class="nav-item active mb-2" href="{% url "home" %}">Home</a></strong> -->
-                <div class="nav-item mr-auto active">
-                    <a href="{% url 'home' %}" class="nav-link text-white mb-3">Home</a>
-                </div>
-            </a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader"
-                    aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </div>
-    <!-- end of navigation -->
+{% block head %}
 
-</header>
+{% endblock %}
 
-<main role="main">
-    <!-- text on top -->
-    <section class="jumbotron text-center">
-        <div class="container">
-            <h1>{{ COMPANY }}</h1>
-            <p class="lead text-muted">Your order at the door :)</p>
-            <p>
-                <a href="#" class="btn btn-primary my-2">Make order</a>
-                <a href="#" class="btn btn-secondary my-2">Clear cart</a>
-            </p>
-        </div>
-    </section>
-    <!-- end of text on top -->
-    <!-- products view  -->
-    <div class="album py-5 bg-light">
-        <div class="container">
-            <div class="row">
 
-                {% for el in products %}
-                <div class="col-md-3">
-                    <div class="card mb-4 shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                             xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
-                             role="img" aria-label="Placeholder: Thumbnail">
-                            <title>{{ el.title }}</title>
-                            <rect width="100%" height="100%" fill="#55595c"></rect>
-                            <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-                        </svg>
-                        <div class="card-body">
-                            <p class="card-text">{{ el.text }}</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Add to cart</button>
-                                    <!-- TODO: lockal storage for cart -->
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Remove</button>
-                                    <!-- TODO: check for 0 values of product, make button unavaible -->
-                                </div>
-                                <small class="text-muted">{{ el.count }}</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
+{% block content %}
 
-            </div>
-        </div>
-    </div>
-</main>
-<!-- end of products view  -->
-<!-- footer -->
-<footer class="text-muted">
-    <div class="container">
-        <p class="float-right">
-            <a href="#">Back to top</a>
-        </p>
-        <p>{{COMPANY}} now in your country!</p>
-    </div>
-</footer>
-<!-- end of footer -->
-<!-- jquery & bootstrap -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script>
-    window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')
-</script>
-<script src="/docs/4.5/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-        crossorigin="anonymous"></script>
-<!-- end of jquery & bootstrap -->
-</body>
-
-</html>
+{% endblock %}
