--- a/DeliveryService/main/templates/main/index.html
+++ b/DeliveryService/main/templates/main/index.html
@@ -11,4 +11,5 @@
 <a class="p-3" href="{% url 'test_page' %}">test link</a>
 <a class="p-3" href="admin">ADMIN PANEL</a>
 <a class="p-3" href="{% url 'shop_page'%}">Shop page</a>
+<a href="{% url 'manage_page' %}">manage couriers</a>
 {% endblock %}
