--- a/DeliveryService/main/templates/main/base.html
+++ b/DeliveryService/main/templates/main/base.html
@@ -7,6 +7,8 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- I don't like bootstrap, but time is running out-->
+  {% load static %}
+  <link rel="stylesheet" href="{% static 'main/css/base.css' %}">
   {% block head %}{% endblock %}
 </head>
 
@@ -20,7 +22,7 @@
     <p class="float-right">
       <a href="#">Back to top</a>
     </p>
-    <p>{{COMPANY}} now in your country!</p>
+    <p>{{ COMPANY }} now in your country!</p>
   </div>
 </footer>
 <!-- end of footer -->
