--- a/DeliveryService/main/templates/main/Shop.html
+++ b/DeliveryService/main/templates/main/Shop.html
@@ -29,53 +29,6 @@
 
 {% block content %}
 
-<header>
-  <!-- navigation -->
-  <div class="bg-dark collapse" id="navbarHeader" style="">
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8 col-md-7 py-4">
-          <h4 class="text-white">About</h4>
-          <p class="text-muted">Add some information about the album below, the author, or any other
-            background context. Make it a few sentences long so folks can pick up some informative tidbits.
-            Then, link them off to some social networking sites
-            or contact information.</p>
-        </div>
-        <div class="col-sm-4 offset-md-1 py-4">
-          <h4 class="text-white">Contact</h4>
-          <ul class="list-unstyled">
-            <li><a href="#" class="text-white">Follow on Twitter</a></li>
-            <li><a href="#" class="text-white">Like on Facebook</a></li>
-            <li><a href="#" class="text-white">Email me</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-
-<!-- TODO: transfer header to base.html -->
-  <div class="navbar navbar-dark bg-dark shadow-sm">
-    <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
-        <img src="{% static 'main/svg/home.svg' %}" alt="home" style="width: 2vw; min-width: 20px">
-          <circle cx="12" cy="13" r="4"></circle>
-          <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
-        </svg>
-        <!-- <strong>Home</strong> -->
-        <!-- <strong><a class="nav-item active mb-2" href="{% url "home" %}">Home</a></strong> -->
-        <div class="nav-item mr-auto active">
-          <a href="{% url 'home' %}" class="nav-link text-white mb-3">Home</a>
-        </div>
-      </a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    </div>
-  </div>
-  <!-- end of navigation -->
-
-</header>
-
 <main role="main">
   <!-- text on top -->
   <section class="jumbotron text-center">
@@ -90,20 +43,23 @@
   </section>
   <!-- end of text on top -->
   <!-- products view  -->
-  <div class="album py-5 bg-light">
+  <div class="album py-5">
     <div class="container">
       <div class="row">
-
         {% for el in products %}
         <div class="col-md-3">
           <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail">
-              <title>{{ el.title }}</title>
-              <rect width="100%" height="100%" fill="#55595c"></rect>
-              <text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text>
-              <!-- TODO: img link -->
-            </svg>
+            <a class="" href="#">
+              <img class="img-fluid rounded" src="
+              {% if el.img %}
+                {% static 'main/img/' %}{{ el.img }}
+              {% else %}
+                {% static 'main/img/NoImageAvailable.png' %}
+              {% endif %}
+              " alt="Image is not avaible">
+            </a>
             <div class="card-body">
+              <p class="card-title text-center h4">{{ el.title }}</p>
               <p class="card-text">{{ el.text }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
@@ -112,11 +68,13 @@
                   <button type="button" class="btn btn-sm btn-outline-secondary">Remove</button>
                   <!-- TODO: check for 0 values of product, make button unavaible -->
                 </div>
-                <small class="text-muted">{{ el.count }}</small>
+                <small class="text-muted">Count: {{ el.count }}</small>
               </div>
             </div>
           </div>
         </div>
+
+
         {% endfor %}
 
       </div>
