--- a/DeliveryService/main/templates/main/base.html
+++ b/DeliveryService/main/templates/main/base.html
@@ -13,6 +13,52 @@
 </head>
 
 <body>
+  <header>
+    <!-- navigation -->
+    <div class="collapse" id="navbarHeader" style="">
+      <div class="container-fluid dark">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-8 col-md-7 py-4">
+              <h4 class="text-white">About</h4>
+              <p class="text-muted">Add some information about the album below, the author, or any other
+                background context. Make it a few sentences long so folks can pick up some informative tidbits.
+                Then, link them off to some social networking sites
+                or contact information.</p>
+            </div>
+            <div class="col-sm-4 offset-md-1 py-4">
+              <h4 class="text-white">Contact</h4>
+              <ul class="list-unstyled">
+                <!-- TODO: replace text -->
+                <li><a href="#" class="text-white">TODO: replace</a></li>
+                <li><a href="#" class="text-white">this boring</a></li>
+                <li><a href="#" class="text-white">old text</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="navbar navbar-dark shadow-sm">
+      <div class="container d-flex justify-content-between">
+        <a href="{% url 'home' %}" class="navbar-brand d-flex align-items-center">
+          <img src="{% static 'main/svg/Logo.svg' %}" alt="home" style="width: 7vw; min-width: 20px">
+          <circle cx="12" cy="13" r="4"></circle>
+          <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+          </svg>
+          <div class="nav-item mr-auto active">
+            <a href="{% url 'home' %}" class="nav-link text-white mb-3">Home</a>
+          </div>
+        </a>
+        <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      </div>
+    </div>
+    <!-- end of navigation -->
+
+  </header>
   {% block content%}{% endblock %}
 </body>
 
@@ -28,10 +74,10 @@
 <!-- end of footer -->
 <!-- jquery & bootstrap -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <script>
   window.jQuery || document.write('<script src="/docs/4.5/assets/js/vendor/jquery.slim.min.js"><\/script>')
 </script>
-<script src="/docs/4.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 <!-- end of jquery & bootstrap -->
 
 </html>
