--- a/DeliveryService/main/templates/main/Shop.html
+++ b/DeliveryService/main/templates/main/Shop.html
@@ -59,8 +59,8 @@
               " alt="Image is not avaible">
             </a>
             <div class="card-body">
-              <p class="card-title text-center h4">{{ el.title }}</p>
-              <p class="card-text">{{ el.text }}</p>
+              <p class="card-title text-center h4 text-break">{{ el.title }}</p>
+              <p class="card-text text-break">{{ el.text }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
                   <button type="button" class="btn btn-sm btn-outline-secondary">Add to cart</button>
