--- a/DeliveryService/main/templates/main/base.html
+++ b/DeliveryService/main/templates/main/base.html
@@ -5,11 +5,16 @@
   <meta charset="UTF-8">
   <title>{% block title%}{% endblock %}</title>
   <meta name="description" content="">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <!-- I don't like bootstrap, but time is running out-->
   {% load static %}
   <link rel="stylesheet" href="{% static 'main/css/base.css' %}">
   {% block head %}{% endblock %}
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'main/flavicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'main/flavicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'main/flavicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'main/flavicon/site.webmanifest' %}">
 </head>
 
 <body>
