--- a/DeliveryService/main/templates/main/Shop.html
+++ b/DeliveryService/main/templates/main/Shop.html
@@ -40,6 +40,9 @@
         <a href="#" class="btn btn-secondary my-2">Clear cart</a>
       </p>
     </div>
+    <div class="container la">
+      <span class="basket">0</span>
+    </div>
   </section>
   <!-- end of text on top -->
   <!-- products view  -->
@@ -63,9 +66,9 @@
               <p class="card-text text-break">{{ el.text }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Add to cart</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary add-cart">Add to cart</button>
                   <!-- TODO: local storage for cart -->
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Remove</button>
+                  <button type="button" class="btn btn-sm btn-outline-secondary remove-cart">Remove</button>
                   <!-- TODO: check for 0 values of product, make button unavaible -->
                 </div>
                 <small class="text-muted">Count: {{ el.count }}</small>
@@ -83,4 +86,6 @@
 </main>
 <!-- end of products view  -->
 
+<script type="text/javascript" src="{% static 'main/js/shopping_cart.js' %}">
+</script>
 {% endblock %}
