--- a/DeliveryService/main/templates/main/index.html
+++ b/DeliveryService/main/templates/main/index.html
@@ -12,4 +12,7 @@
 <a class="p-3" href="admin">ADMIN PANEL</a>
 <a class="p-3" href="{% url 'shop_page'%}">Shop page</a>
 <a href="{% url 'manage_page' %}">manage couriers</a>
+<a href="{% url 'courier' %}">courier hub</a>
+<a href="{% url 'logout' %}">Logout</a>
+
 {% endblock %}
