--- a/DeliveryService/main/templates/main/test.html
+++ b/DeliveryService/main/templates/main/test.html
@@ -4,13 +4,110 @@
 
 
 {% block head %}
-
+<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 {% endblock %}
 
 
 {% block content %}
-<style media="screen">
-  body{background-color: black;}
-</style>
-<svg class="icon___3c2wx navigation-logo" width="111" height="24" viewBox="0 0 111 24"><g fill="#FFF" fill-rule="nonzero"><path d="M88.066 20.508h22.805v2.973H88.066zM88.066 10.545h22.805v2.973H88.066zM88.066.585h22.805v2.973H88.066zM39.232 23.961c-6.624 0-11.993-5.355-11.993-11.961S32.609.039 39.232.039C45.856.039 51.225 5.394 51.225 12c-.006 6.603-5.372 11.954-11.993 11.961zm0-20.949c-4.984 0-9.024 4.03-9.024 9s4.04 9 9.024 9c4.984 0 9.024-4.03 9.024-9a8.988 8.988 0 0 0-2.639-6.372A9.037 9.037 0 0 0 39.232 3v.012zM77.462 3.438v17.019H60.397V3.438h17.065zM80.443.465H57.416V23.43h23.027V.465zM.084.528h2.981v22.944H.084zM19.935 23.37L8.585 12.051 20.037.63l2.106 2.1-9.343 9.321 9.24 9.219z"></path></g></svg>
+<!--test code from github-->
+<a href="{% url 'logout' %}">Logout</a>
+
+</head>
+
+<h1>Shopping Cart</h1>
+
+<div>
+  <ul>
+    <li><a class="add-to-cart" href="#" data-name="Apple" data-price="1.22">Apple $1.22</a></li>
+    <li><a class="add-to-cart" href="#" data-name="Banana" data-price="1.33">Banana $1.33</a></li>
+    <li><a class="add-to-cart" href="#" data-name="Shoe" data-price="22.33">Shoe $22.33</a></li>
+    <li><a class="add-to-cart" href="#" data-name="Frisbee" data-price="5.22">Frisbee $5.22</a></li>
+  </ul>
+  <button id="clear-cart">Clear Cart</button>
+</div>
+
+
+<div>
+  <ul id="show-cart">
+    <li>???????</li>
+  </ul>
+  <div>You have <span id="count-cart">X</span> items in your cart</div>
+  <div>Total Cart:$<span id="total-cart"></span></div>
+</div>
+
+
+<script src="js/shoppingCart.js"></script>
+
+<script>
+  $(".add-to-cart").click(function (event) {
+    event.preventDefault();
+    var name = $(this).attr("data-name");
+    var price = Number($(this).attr("data-price"));
+
+    shoppingCart.addItemToCart(name, price, 1);
+    displayCart();
+  });
+
+  $("#clear-cart").click(function (event) {
+    shoppingCart.clearCart();
+    displayCart();
+  });
+
+  function displayCart() {
+    var cartArray = shoppingCart.listCart();
+    console.log(cartArray);
+    var output = "";
+
+    for (var i in cartArray) {
+      output += "<li>" +
+              cartArray[i].name +
+              " <input class='item-count' type='number' data-name='" +
+              cartArray[i].name +
+              "' value='" + cartArray[i].count + "' >" +
+              " x " + cartArray[i].price +
+              " = " + cartArray[i].total +
+              " <button class='plus-item' data-name='" +
+              cartArray[i].name + "'>+</button>" +
+              " <button class='subtract-item' data-name='" +
+              cartArray[i].name + "'>-</button>" +
+              " <button class='delete-item' data-name='" +
+              cartArray[i].name + "'>X</button>" +
+              "</li>";
+    }
+
+    $("#show-cart").html(output);
+    $("#count-cart").html(shoppingCart.countCart());
+    $("#total-cart").html(shoppingCart.totalCart());
+  }
+
+  $("#show-cart").on("click", ".delete-item", function (event) {
+    var name = $(this).attr("data-name");
+    shoppingCart.removeItemFromCartAll(name);
+    displayCart();
+  });
+
+  $("#show-cart").on("click", ".subtract-item", function (event) {
+    var name = $(this).attr("data-name");
+    shoppingCart.removeItemFromCart(name);
+    displayCart();
+  });
+
+  $("#show-cart").on("click", ".plus-item", function (event) {
+    var name = $(this).attr("data-name");
+    shoppingCart.addItemToCart(name, 0, 1);
+    displayCart();
+  });
+
+  $("#show-cart").on("change", ".item-count", function (event) {
+    var name = $(this).attr("data-name");
+    var count = Number($(this).val());
+    shoppingCart.setCountForItem(name, count);
+    displayCart();
+  });
+
+
+  displayCart();
+</script>
+
+
 {% endblock %}
