--- a/DeliveryService/main/templates/main/Shop.html
+++ b/DeliveryService/main/templates/main/Shop.html
@@ -7,20 +7,20 @@
 
 {% block head %}
 <style>
-  .bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
+    .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
     }
-  }
+
+    @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+            font-size: 3.5rem;
+        }
+    }
 </style>
 <!--<link href="test.css" rel="stylesheet">-->
 {% load static %}
@@ -28,63 +28,62 @@
 {% endblock %}
 
 {% block content %}
-
+<!--time is limited, so I have to remove some features-->
 <main role="main">
-  <!-- text on top -->
-  <section class="jumbotron text-center">
-    <div class="container">
-      <h1>{{ COMPANY }}</h1>
-      <p class="lead text-muted">Your order at the door :)</p>
-      <p>
-        <a href="#" class="btn btn-primary my-2">Make order</a>
-        <a href="#" class="btn btn-secondary my-2">Clear cart</a>
-      </p>
-    </div>
-    <div class="container la">
-      <span>Cart: </span><span class="basket">0</span>
-    </div>
-  </section>
-  <!-- end of text on top -->
-  <!-- products view  -->
-  <div class="album py-5">
-    <div class="container">
-      <div class="row">
-        <!-- price is located on server, do you want to crack? Good luck -->
-        {% for el in products %}
-        <div class="col-md-3">
-          <div class="card mb-4 shadow-sm">
-            <a class="" href="#">
-              <img class="img-fluid rounded" src="
+    <!-- text on top -->
+    <section class="jumbotron text-center">
+        <div class="container">
+            <h1>{{ COMPANY }}</h1>
+            <p class="lead text-muted">Your order at the door :)</p>
+            <p>
+                <a href="{% url 'manage_page' %}" class="btn btn-info my-2">I am a manager</a>
+                <a href="{% url 'courier' %}" class="btn btn-secondary my-2">I am a courier</a>
+            </p>
+        </div>
+        <div class="container la">
+            <!--      <span>Cart: </span><span class="basket">0</span>-->
+        </div>
+    </section>
+    <!-- end of text on top -->
+    <!-- products view  -->
+    <div class="album py-5">
+        <div class="container">
+            <div class="row">
+                <!-- price is located on server, do you want to crack? Good luck -->
+                {% for el in products %}
+                <div class="col-md-3">
+                    <div class="card mb-4 shadow-sm">
+                        <a class="" href="#">
+                            <img class="img-fluid rounded" src="
               {% if el.img %}
                 {% static 'main/img/' %}{{ el.img }}
               {% else %}
                 {% static 'main/img/NoImageAvailable.png' %}
               {% endif %}
               " alt="Image is not avaible">
-            </a>
-            <div class="card-body">
-              <p class="card-title text-center h4 text-break">{{ el.title }}</p>
-              <p class="card-text text-break">{{ el.text }}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary add-cart" value="{{ el.tag }}"
-                          price="{{ el.price }}">Add to cart
-                  </button>
-                  <!-- TODO: local storage for cart -->
-                  <button type="button" class="btn btn-sm btn-outline-secondary remove-cart">Remove</button>
-                  <!-- TODO: check for 0 values of product, make button unavaible -->
+                        </a>
+                        <div class="card-body">
+                            <p class="card-title text-center h4 text-break">{{ el.title }}</p>
+                            <p class="card-text text-break">{{ el.text }}</p>
+                            <div class="d-flex justify-content-between align-items-center">
+                                <a href="{% url 'make_order' %}{{ el.tag }}" class="btn btn-secondary">View details</a>
+                                <!--                <div class="btn-group">-->
+                                <!--                  <button type="button" class="btn btn-sm btn-outline-secondary add-cart" value="{{ el.tag }}"-->
+                                <!--                          price="{{ el.price }}">Add to cart-->
+                                <!--                  </button>-->
+                                <!--                  <button type="button" class="btn btn-sm btn-outline-secondary remove-cart">Remove</button>-->
+                                <!--                </div>-->
+                                <small class="text-muted">Count: {{ el.count }}</small>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <small class="text-muted">Count: {{ el.count }}</small>
-              </div>
+
+                {% endfor %}
+
             </div>
-          </div>
         </div>
-
-        {% endfor %}
-
-      </div>
     </div>
-  </div>
 </main>
 <!-- end of products view  -->
 
